fix(Group Items): adjust z-index for markdown list items

--- a/src/shoppinglist.css
+++ b/src/shoppinglist.css
@@ -210,3 +210,7 @@ body {
   padding-left: 10px;
 }
 
+.md-list-item {
+  z-index: auto !important;
+}
+
